# RustCrypto-traits

aead/: Cargo.toml
aead/src/: lib.rs
cipher/: Cargo.toml
crypto-common/: Cargo.toml
digest/: Cargo.toml
elliptic-curve/: Cargo.toml
signature/: Cargo.toml
