[package]
name = "aead"
version = "0.6.0-rc.5"
authors = ["RustCrypto Developers"]
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/aead"
readme = "README.md"
repository = "https://github.com/RustCrypto/traits"
license = "MIT OR Apache-2.0"
keywords = ["crypto", "encryption"]
categories = ["cryptography", "no-std"]
description = """
Traits for Authenticated Encryption with Associated Data (AEAD) algorithms,
such as AES-GCM as ChaCha20Poly1305, which provide a high-level API
"""

[dependencies]
crypto-common = { version = "0.2.0-rc.8", path = "../crypto-common" }
inout = { version = "0.2.2", path = "../../../RustCrypto/utils/inout" }

# optional dependencies
arrayvec = { version = "0.7", optional = true, default-features = false }
blobby = { version = "0.4", optional = true, path = "../../../RustCrypto/utils/blobby" }
bytes = { version = "1", optional = true, default-features = false }
cipher = { version = "0.5.0-rc.3", optional = true, default-features = false, path = "../../traits/cipher" }

[features]
default = ["rand_core", "chunked"]
alloc = []
dev = ["blobby", "alloc"]
getrandom = ["crypto-common/getrandom"]
rand_core = ["crypto-common/rand_core"]
chunked = ["cipher"]

[package.metadata.docs.rs]
all-features = true
